--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     </div>
                     <div class="content-right">
-                        <img src="/Flower Asset/pngwing 10.png" alt="">
+                        <img src="./FlowerAsset/pngwing 10.png" alt="">
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
 
                     </div>
                     <div class="content-right">
-                        <img src="/Flower Asset/pngwing 8.png" alt="">
+                        <img src="/FlowerAsset/pngwing 8.png" alt="">
                     </div>
                 </div>
             </div>
