--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="support-content">
                         <div style="display:flex ; justify-content: center; align-items: center; flex-direction: column; gap: 30px;">
                             <div style="height: 88px; width: 88px;">
-                                <img style="width: full; height: full;" src="/FlowerAsset/Group 57.png" alt="">
+                                <img style="width: full; height: full;" src="./FlowerAsset/Group 57.png" alt="">
                            </div>
                            <p style="text-align: center; color: rgba(39, 39, 39, 0.80); font-size: 24px; font-family: Lato; font-weight: 600; line-height: 35px; word-wrap: break-word">Same Day Delivery. Click & Collect.
 
@@ -88,7 +88,7 @@
                         </div>
                         <div style="display:flex ; justify-content: center; align-items: center; flex-direction: column; gap: 30px;">
                             <div style="height: 88px; width: 88px;">
-                                <img style="width: full; height: full;" src="/FlowerAsset/Group 58.png" alt="">
+                                <img style="width: full; height: full;" src="./FlowerAsset/Group 58.png" alt="">
                            </div>
                            <p style="text-align: center; color: rgba(39, 39, 39, 0.80); font-size: 24px; font-family: Lato; font-weight: 600; line-height: 35px; word-wrap: break-word">Fresh Flowers. Local Growers.
 
@@ -96,7 +96,7 @@
                         </div>
                         <div style="display:flex ; justify-content: center; align-items: center; flex-direction: column; gap: 30px;">
                             <div style="height: 88px; width: 88px;">
-                                <img style="width: full; height: full;" src="/FlowerAsset/Group 59.png" alt="">
+                                <img style="width: full; height: full;" src="./FlowerAsset/Group 59.png" alt="">
                            </div>
                            <p style="text-align: center; color: rgba(39, 39, 39, 0.80); font-size: 24px; font-family: Lato; font-weight: 600; line-height: 35px; word-wrap: break-word">24/7 Free Support.
 
@@ -128,7 +128,7 @@
 
                     </div>
                     <div class="content-right">
-                        <img src="/FlowerAsset/pngwing 8.png" alt="">
+                        <img src="./FlowerAsset/pngwing 8.png" alt="">
                     </div>
                 </div>
             </div>
@@ -145,20 +145,20 @@
                     </div>
                     <div class="deals-product-card">
                         <div class="card">
-                                    <img style="width: 100%; height: 100%;" src="/FlowerAsset/Flower 01.png" alt="delas product">
+                                    <img style="width: 100%; height: 100%;" src="./FlowerAsset/Flower 01.png" alt="delas product">
                         </div>
                         <div class="card">
-                                    <img style="width: 100%; height: 100%;" src="/FlowerAsset/Rectangle 4.png" alt="delas product">
+                                    <img style="width: 100%; height: 100%;" src="./FlowerAsset/Rectangle 4.png" alt="delas product">
                         </div>
                         <div class="card">
-                                    <img style="width: 100%; height: 100%;" src="/FlowerAsset/Rectangle 5.png" alt="delas product">
+                                    <img style="width: 100%; height: 100%;" src="./FlowerAsset/Rectangle 5.png" alt="delas product">
                         </div>
                         <div class="card">
-                                    <img style="width: 100%; height: 100%;" src="/FlowerAsset/Rectangle 6.png" alt="delas product">
+                                    <img style="width: 100%; height: 100%;" src="./FlowerAsset/Rectangle 6.png" alt="delas product">
                         </div>
                     </div>
                     <div class="deals-content">
-                        <img style="width: 100%; height: 100%;" src="/FlowerAsset/Rectangle 9.png" alt="">
+                        <img style="width: 100%; height: 100%;" src="./FlowerAsset/Rectangle 9.png" alt="">
                         <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;" >
                             <p style="text-align: center; color: #272727; font-size: 40px; font-family: Lato; font-weight: 800; word-wrap: break-word">Get The Latest Deals</p>
                             <p style="text-align: center; margin-top: 20px; color: rgba(39, 39, 39, 0.60); font-size: 18px; font-family: Lato; font-weight: 400; line-height: 30px; word-wrap: break-word">$30 coupon for first shopping </p>
