--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="card">
                             <div style="background: rgba(167, 33, 98, 0.15); " class="card-rectangle">
                                 <div style="width: 310px; height: 428px;margin-top: 110px; ">
-                                    <img style="width: 100%; height: 100%;" src="../FlowerAsset/pngwing 6.png" alt="fetaured-flower">
+                                    <img style="width: 100%; height: 100%;" src="./FlowerAsset/pngwing 6.png" alt="fetaured-flower">
                                 </div>
                             </div>
                             <div style="margin-top: 30px;">
@@ -57,7 +57,7 @@
                         <div class="card">
                             <div style="background: rgba(5, 150.70, 160, 0.15);" class="card-rectangle">
                                 <div style="width: 370px; height: 370px;margin-top: 117px; ">
-                                    <img style="width: 100%; height: 100%;" src="../FlowerAsset/pngwing 5.png" alt="fetaured-flower">
+                                    <img style="width: 100%; height: 100%;" src="./FlowerAsset/pngwing 5.png" alt="fetaured-flower">
                                 </div>
                             </div>
                             <div style="margin-top: 30px;">
@@ -67,7 +67,7 @@
                         <div class="card">
                             <div style=" background: rgba(71, 125, 17, 0.15);" class="card-rectangle">
                                 <div style="width: 314px; height: 471px;margin-top: 67px; ">
-                                    <img style="width: 100%; height: 100%;" src="../FlowerAsset/pngwing 7.png" alt="fetaured-flower">
+                                    <img style="width: 100%; height: 100%;" src="./FlowerAsset/pngwing 7.png" alt="fetaured-flower">
                                 </div>
                             </div>
                             <div style="margin-top: 30px;">
